// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"Incorrect

interface Example {
  property?: string;
}

declare const example: Example;
const includesBaz = example.property!.includes('baz');
                    ~~~~~~~~~~~~~~~~~ Forbidden non-null assertion.
"
`;

exports[` 2`] = `
"Correct

interface Example {
  property?: string;
}

declare const example: Example;
const includesBaz = example.property?.includes('baz') ?? false;
"
`;
